edit: first lines

--- a/author_guideline_template.ipynb
+++ b/author_guideline_template.ipynb
@@ -24,31 +24,7 @@
     ]
    },
    "source": [
-    " ### Contributor1FirstName  Contributor1LastName [![orcid](https://orcid.org/sites/default/files/images/orcid_16x16.png)](https://orcid.org/ORCID_ID) \n",
-    "Institution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "contributor"
-    ]
-   },
-   "source": [
-    "### Contributor2FirstName  Contributor2LastName [![orcid](https://orcid.org/sites/default/files/images/orcid_16x16.png)](https://orcid.org/ORCID_ID_IF_EXIST) \n",
-    "Institution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "contributor"
-    ]
-   },
-   "source": [
-    "### Contributor3FirstName  Contributor3LastName [![orcid](https://orcid.org/sites/default/files/images/orcid_16x16.png)](https://orcid.org/ORCID_ID_IF_EXIST) \n",
+    " ### Antoine Fauchié [![orcid](https://orcid.org/sites/default/files/images/orcid_16x16.png)](https://orcid.org/0000-0003-1757-496X) \n",
     "Institution"
    ]
   },
@@ -146,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the first paragrah of running text with a citation example "
+    "Ceci est une introduction."
    ]
   },
   {
@@ -226,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
